--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ target_include_directories(realtime_tools PUBLIC
   $<INSTALL_INTERFACE:include/realtime_tools>
 )
 ament_target_dependencies(realtime_tools PUBLIC ${THIS_PACKAGE_INCLUDE_DEPENDS})
-if(UNIX)
+if(UNIX AND NOT APPLE)
   target_link_libraries(realtime_tools PUBLIC cap)
 endif()
 
@@ -62,7 +62,7 @@ target_include_directories(thread_priority PUBLIC
   $<INSTALL_INTERFACE:include/realtime_tools>
 )
 ament_target_dependencies(thread_priority PUBLIC ${THIS_PACKAGE_INCLUDE_DEPENDS})
-if(UNIX)
+if(UNIX AND NOT APPLE)
   target_link_libraries(thread_priority PUBLIC cap)
 endif()
 
@@ -88,6 +88,9 @@ if(BUILD_TESTING)
   ament_add_gmock(lock_free_queue_tests test/lock_free_queue_tests.cpp)
   if(WIN32)
     # atomic is not found on Windows, but also not needed
+    target_link_libraries(lock_free_queue_tests realtime_tools Boost::boost)
+  elseif(APPLE)
+    # On macOS, atomic lib is generally not needed
     target_link_libraries(lock_free_queue_tests realtime_tools Boost::boost)
   else()
     # without adding atomic, clang throws a linker error
